--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         <activity android:name=".AlarmSettingActivity"
             android:label="@string/app_name">
         </activity>
+
+        <receiver android:name=".AlarmReceiver"
+            android:process=":remote"/>
     </application>
 
 </manifest>
