--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,9 @@
             android:label="@string/app_name">
         </activity>
 
-        <receiver android:name=".AlarmReceiver"
-            android:process=":remote"/>
+        <receiver android:name=".AlarmReceiver">
+        </receiver>
+
     </application>
 
 </manifest>
