--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Alarm_final"
         android:name=".UtilCommon">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,13 +20,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AlarmListActivity"
+            android:name=".activities.AlarmListActivity"
             android:label="@string/app_name" >
         </activity>
-        <activity android:name=".AlarmSettingActivity"
+        <activity android:name=".activities.AlarmSettingActivity"
             android:label="@string/app_name">
         </activity>
-        <activity android:name=".AlarmActivity"
+        <activity android:name=".activities.AlarmActivity"
             android:taskAffinity="alarm.wakeup"><!-- 別タスクで起動 好きなパッケージ名を指定 -->
         </activity>
 
