--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             android:label="@string/app_name">
         </activity>
         <activity android:name=".activities.AlarmActivity"
+            android:excludeFromRecents="true"
             android:taskAffinity="alarm.wakeup"><!-- 別タスクで起動 好きなパッケージ名を指定 -->
         </activity>
 
